correction css alignement create employee

--- a/src/sass/pages/createEmployee.scss
+++ b/src/sass/pages/createEmployee.scss
@@ -8,6 +8,8 @@
         // align-items: center;
         gap: 1.25rem;
         padding: 1.25rem;
+        background-color: lighten($color: $greenlight, $amount: 55%);
+        border-radius: 1.25rem;
         .formData {
             display: flex;
             flex-direction: column;
@@ -28,11 +30,14 @@
             }
         }
         fieldset {
-            background-color: lighten($color: $greenlight, $amount: 55%);
-            border-radius: 1.25rem;
-            padding: 1.25rem;
-            border: none;
             padding: 1.25rem 1rem;
+            border: none;
+            border-top: 1px solid $darkGreen;
+            border-bottom: 1px solid $darkGreen;
+
+            h3 {
+                text-align: left;
+            }
             .formData {
                 margin: 1.25rem 0;
             }
@@ -40,6 +45,7 @@
         .Dropdown-control {
             width: 500px;
             border-radius: 5px;
+            margin-top: 10px;
             .Dropdown-placeholder {
                 text-align: left;
             }
@@ -50,13 +56,14 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            background-color: lighten($color: $greenlight, $amount: 55%);
+            background-color: $darkGreen;
             font-weight: bold;
-            color: $darkGreen;
+            color: white;
             transition: all 0.5s ease-in-out;
             &:hover {
-                background-color: $darkGreen;
-                color: white;
+                background-color: lighten($color: $greenlight, $amount: 55%);
+                color: $darkGreen;
+                border: 1px solid white;
             }
         }
     }
